--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ before_install:
   - travis_retry sdk install gradle 4.4.1 # gradle version 4.2.1 以降を使用
   - travis_retry sdk default gradle 4.4.1
 
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+
 
 
 # Jacocoを含むテストとビルドの実行およびcodecovへJacocoの実行結果送信
