--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
 
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1200x32"
+  - pwd;find . | sort | sed '1d;s/^\.//;s/\/\([^/]*\)$/|--\1/;s/\/[^/|]*/|  /g' # 代替treeコマンド (https://qiita.com/yone098@github/items/bba8a42de6b06e40983b)
+  # - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1200x32"
 
 
 
