--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,8 @@ before_install:
   - travis_retry sdk list gradle # gradleの利用可能なバージョンの一覧を表示
   - travis_retry sdk install gradle 4.4.1 # gradle version 4.2.1 以降を使用
   - travis_retry sdk default gradle 4.4.1
-
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - pwd;find . | sort | sed '1d;s/^\.//;s/\/\([^/]*\)$/|--\1/;s/\/[^/|]*/|  /g' # 代替treeコマンド (https://qiita.com/yone098@github/items/bba8a42de6b06e40983b)
+  # - export DISPLAY=:99.0
+  # - sh -e /etc/init.d/xvfb start
   # - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1920x1200x32"
 
 
