--- a/codecov.yml
+++ b/codecov.yml
@@ -5,7 +5,7 @@ codecov:
 coverage:
   precision: 2
   round: down
-  range: "0...100"
+  range: "60...100"
 
   status:
     project: yes
@@ -14,6 +14,7 @@ coverage:
 
   ignore:
     - "./src/main/java/io/github/morichan/retuss/parser/*"
+    - "./src/main/java/io/github/morichan/retuss/windows/Controller.java"
 
 parsers:
   gcov:
