--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.0-M1'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.0-M1'
     testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.0-M1' // parameterized tests
+    testCompile 'org.mockito:mockito-core:2.+'
+    testCompile 'org.powermock:powermock-api-mockito-common:1+'
     testCompile 'org.jmockit:jmockit:1.38'
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'net.java.quickcheck:quickcheck:0.6'
