--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'spring-boot'
 // mainClassName = 'io.github.morichan.retuss.window.RetussWindow'
 
 sourceCompatibility = 9
+targetCompatibility = 9
 tasks.withType(AbstractCompile)*.options*.encoding =
         tasks.withType(GroovyCompile)*.groovyOptions*.encoding =
                 javadoc.options.encoding =
@@ -69,17 +70,17 @@ if (gradle.startParameter.taskNames.contains('uploadArchives')) {
 
 
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-artifacts {
-    archives javadocJar, sourcesJar
-}
+//task javadocJar(type: Jar) {
+//    classifier = 'javadoc'
+//    from javadoc
+//}
+//task sourcesJar(type: Jar) {
+//    classifier = 'sources'
+//    from sourceSets.main.allSource
+//}
+//artifacts {
+//    archives javadocJar, sourcesJar
+//}
 
 jar {
     // SpringBoot pluginを利用することで邪魔になったため除外
