--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ apply plugin: 'antlr'
 dependencies {
     antlr 'org.antlr:antlr4:4+'
 
-    compile 'io.github.morichan:fescue:2.+'
+    compile 'io.github.morichan:fescue:2.1.0'
     compile 'org.fxmisc.richtext:richtextfx:0.9.0'
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.0-M1'
