--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ apply plugin: 'antlr'
 dependencies {
     antlr 'org.antlr:antlr4:4+'
 
-    compile 'io.github.morichan:fescue:2.1.0'
+    compile 'io.github.morichan:fescue:2.1.1'
     compile 'org.fxmisc.richtext:richtextfx:0.9.0'
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.0-M1'
@@ -70,17 +70,17 @@ if (gradle.startParameter.taskNames.contains('uploadArchives')) {
 
 
 
-//task javadocJar(type: Jar) {
-//    classifier = 'javadoc'
-//    from javadoc
-//}
-//task sourcesJar(type: Jar) {
-//    classifier = 'sources'
-//    from sourceSets.main.allSource
-//}
-//artifacts {
-//    archives javadocJar, sourcesJar
-//}
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+artifacts {
+    archives javadocJar, sourcesJar
+}
 
 jar {
     // SpringBoot pluginを利用することで邪魔になったため除外
@@ -110,9 +110,9 @@ class OSChecker {
 println ">>> This OS that test runs is " + OSChecker.getFamily()
 
 // OSがWindowsでない場合はTest実行時にGUITestsタグを付けたテストスイートを実行しない
-// if (OSChecker.getFamily() != "windows") {
+if (OSChecker.getFamily() != "windows") {
     junitPlatform.filters.tags.exclude "GUITests"
-//}
+}
 
 junitPlatform.enableStandardTestTask true
 
